--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <div class="main">
         <div class="container">
             <form action="#" class="time-form">
-                <input type="text" class="time-input" />
+                <input placeholder="YYYY,MM,DD" type="text" class="time-input" />
                 <input type="submit" class="submit-form" value="Check how much time left">
-                <p class="answer">Time left: </p>
+                <p class="answer">Time left: <span></span></p>
             </form>
         </div>
     </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
