не работает автоматический скрол

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<div class="chat__Container">
 					<template id="template">
 						<div class="my__SMS message__completed">
-							<div id="contentMyMessage" class="text__my_SMS" >f</div>
-							<div class="time__SMS">18:48</div>
+							<div id="contentMyMessage" class="text__my__SMS" ></div>
+							<div class="time__SMS"></div>
 						</div>
 					</template>
 					<div class="my__SMS message__completed">
