--- a/index.html
+++ b/index.html
@@ -9,21 +9,125 @@
     <title>chat</title>
 </head>
 <body>
+    <div class="menu">
+        <div class="settings-menu">
+            <div class="header">
+                <span>Настройки</span>
+                <span class="exit">+</span>
+            </div>
+            <span>Имя в чате:</span>
+            <form>
+                <input type="text" placeholder="введите имя">
+                <button>-></button>
+            </form>
+        </div>
+    </div>
+    <div class="menu">
+        <div class="auth-menu">
+            <div class="header">
+                <span>Авторизация</span>
+                <span class="exit">+</span>
+            </div>
+            <span>Почта:</span>
+            <form id="autorize">
+                <input type="email" placeholder="mail@server.com"><br>
+                <button>Получить код</button>
+            </form>
+        </div>
+    </div>
+    <div class="menu">
+        <div class="response-menu">
+            <div class="header">
+                <span>Подтверждение</span>
+                <span class="exit">+</span>
+            </div>
+            <div>
+                <span>Код:</span>
+                <form>
+                    <input type="text"><br>
+                    <button>Войти</button>
+                </form>
+            </div>
+        </div>
+    </div>
     <div class="main">
         <div class="header">
             <button class="settings">Настройки</button>
-            <button class="logout">Выйти</button> 
+            <button class="auth">Выйти</button> 
         </div>
         <div class="messages">
-            <p class="my_messages">Я: Добрый день!</p>
-            <p class="other_messages">Собеседник мой: Добрый день!</p>
-            <p class="other_messages">Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</p>
-            <p class="my_messages">Я: Добрый день!</p>
-            <p class="other_messages">Собеседник мой: Добрый день!</p>
-            <p class="other_messages">Собеседник мой: Добрый день!</p>
-            <p class="other_messages">Собеседник мой: Добрый день!</p>
-            <p class="other_messages">Собеседник мой: Добрый день!</p>
-            <p class="other_messages">Собеседник мой: Добрый день!</p>
+            <div class="my_messages">
+                <div class="message_delivered">
+                    <span>Я: Добрый день!</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_delivered">
+                    <span>Собеседник мой: Добрый день!</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_send">
+                    <span>Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="my_messages">
+                <div class="message_delivered">
+                    <span>Я: Добрый день!</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_send">
+                    <span>Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_delivered">
+                    <span>Собеседник мой: Добрый день!</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_delivered">
+                    <span>Собеседник мой: Добрый день!</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_send">
+                    <span>Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_delivered">
+                    <span>Собеседник мой: Добрый день!</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_send">
+                    <span>Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_delivered">
+                    <span>Собеседник мой: Добрый день!</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
+            <div class="other_messages">
+                <div class="message_delivered">
+                    <span>Собеседник мой: Добрый день!</span>
+                    <span class="time">18:45</span>
+                </div>
+            </div>
         </div>
         <form class="form">
             <input class="input" type="text">
