add popup block

--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
         </div>
       </div>
     </div>
+    <div class="popup-layout">
+      <div class="popup-wrapper">
+        <form action="" class="popup-form">
+          <div class="header-block">
+            <h3>Настройки</h3>
+            <button class="close-btn"></button>
+          </div>
+          <div class="input-block">
+            <label for="popup-field" class="popup-label">Имя в чате </label>
+            <input
+              type="text"
+              class="user-field"
+              placeholder="Samuel"
+              id="popup-field"
+            />
+            <button type="submit" class="common-btn">-></button>
+          </div>
+        </form>
+      </div>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
