--- a/danis/index.html
+++ b/danis/index.html
@@ -49,7 +49,63 @@
                 </form>
             </div>
         </div>
+        <div class="autorization__block">
+            <div class="autorization__block-container">
+                <div class="autorization__block-head">
+                    <div class="autorization__block-head-title">
+                        Авторизация
+                    </div>
+                    <div class="autorization__block-head-close">
+                        X
+                    </div>
+                </div>
+                <div class="autorization__block-main">
+                    <div class="autorization__block-main-title">
+                        Почта:
+                    </div>
+                    <form action="" class="autorization__form">
+                        <div class="autorization__block-main-input">
+                            <input type="email">
+                        </div>
+                        <input type="submit" class="autorization__block-main-button" value="Получить код">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="input__block">
+            <div class="input__block-container">
+                <div class="input__block-head">
+                    <div class="input__block-head-title">
+                        Подтверждение
+                    </div>
+                    <div class="input__block-head-close">
+                        X
+                    </div>
+                </div>
+                <div class="input__block-main">
+                    <div class="input__block-main-title">
+                        Код:
+                    </div>
+                    <form action="" class="input__form">
+                        <div class="input__block-main-input">
+                            <input type="text">
+                        </div>
+                        <input type="submit" class="input__block-main-button" value="Войти">
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+
+    <template id="tmpl">
+        <div class="message_item">
+        </div>
+        <div class="message_time">
+        </div>
+    </template>
+
     <script type="module" src="script.js"></script>
 </body>
 
