--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="wrapper">
+            <div class="nav">
+                <button class="nav__button">Настройки</button>
+                <button class="nav__button">Выйти</button>
+            </div>
+            <div class="chat">
+
+            </div>
+            <div class="message">
+                <input type="text" class="text">
+                <button class="nav__button">
+                    <img src="./img/-_.svg" alt="send">
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container container_color">
+        <div class="sett ">
+            <div class="sett__title nav ">
+                <div>Настройки</div>
+                <div>
+                    <img src="./img/+.svg" alt="">
+                </div>
+            </div>
+            <div>
+                <p>Имя в чате</p>
+            </div>
+            <div class="message">
+                <input type="text" class="text">
+                <button class="nav__button">
+                    <img src="./img/-_.svg" alt="send">
+                </button>
+            </div>
+        </div>
+    </div>
     
     <script src="./js/main.js"></script>
 </body>
