--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
           </ul>
         </div>
         <div class="message-interface">
-          <form action="" class="message-form">
+          <form action="" class="message-form" id="messageForm">
             <input
               type="text"
               class="message-field"
               placeholder="введите сообщение"
+              id="messageInput"
             />
             <button type="submit" class="common-btn">-></button>
           </form>
@@ -72,6 +73,6 @@
         </form>
       </div>
     </div>
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
