add new file for elements variable, create function addMessage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
           <button class="logout-btn common-btn">Выход</button>
         </div>
         <div class="message-screen">
-          <ul class="message-list">
+          <ul class="message-list" id="messageList">
+            <template id="messageTemplate">
+              <li class="message-item">
+                <div class="message-text"><span class="author"></span></div>
+                <div class="message-date"></div>
+              </li>
+            </template>
             <li class="message-item">
               <div class=""><span class="author">Я:</span> Добрый день!</div>
               <div class="message-date">18:45</div>
