--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="chat">
-            <div class="message">
+            <!-- <div class="message">
                 <span>Собеседник мой: </span>
                 <span>А это второе и, кажется, оно очень
                     длинное, чтобы поместиться на
@@ -73,8 +73,8 @@
                     <span class="minutes">45</span>
                 </div>
             </div>
-            
-            
+
+
             <div class="message my sent">
                 <span>Я: </span>
                 <span>Добрый день!</span>
@@ -86,9 +86,7 @@
             </div>
             <div class="message">
                 <span>Собеседник мой: </span>
-                <span>А это второе и, кажется, оно очень
-                    длинное, чтобы поместиться на
-                    одной строке
+                <span>А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке
                 </span>
                 <div class="time">
                     <span class="hours">18</span>
@@ -113,18 +111,30 @@
                     <span>:</span>
                     <span class="minutes">45</span>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div class="input">
             <form class="input__form">
                 <input type="text" placeholder="Сообщение..." class="input__form-message">
-                <input type="button" value=">>" class="input__form-send">
+                <input type="submit" value=">>" class="input__form-send">
             </form>
         </div>
     </div>
 
-    <script src="./popup.js"></script>
+    <template id="template">
+        <span>Я: </span>
+        <span class="message__text">Добрый день!</span>
+        <div class="time">
+            <span class="hours">18</span>
+            <span>:</span>
+            <span class="minutes">45</span>
+        </div>
+    </template>
+
+    <script src="ui.js" type="module"></script>
+    <script src="popup.js" type="module"></script>
+    <script src="main.js" type="module"></script>
 </body>
 
 </html>
