--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <span>Почта:</span>
             <form id="autorize">
-                <input type="email" placeholder="mail@server.com"><br>
+                <input type="email" placeholder="my@email.com"><br>
                 <button>Получить код</button>
             </form>
         </div>
@@ -41,12 +41,11 @@
                 <span>Подтверждение</span>
                 <span class="exit">+</span>
             </div>
-            <div>
-                <span>Код:</span>
-                <form>
-                    <input type="text"><br>
-                    <button>Войти</button>
-                </form>
+            <span>Код:</span>
+            <form id="response-code">
+                <input type="text"><br>
+                <button>Войти</button>
+            </form>
             </div>
         </div>
     </div>
@@ -57,7 +56,7 @@
         </div>
         <div class="messages">
             <div class="my_messages">
-                <div class="message_delivered">
+                <div class="message_send">
                     <span>Я: Добрый день!</span>
                     <span class="time">18:45</span>
                 </div>
@@ -69,19 +68,19 @@
                 </div>
             </div>
             <div class="other_messages">
-                <div class="message_send">
+                <div class="message_delivered">
                     <span>Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</span>
                     <span class="time">18:45</span>
                 </div>
             </div>
             <div class="my_messages">
-                <div class="message_delivered">
+                <div class="message_send">
                     <span>Я: Добрый день!</span>
                     <span class="time">18:45</span>
                 </div>
             </div>
             <div class="other_messages">
-                <div class="message_send">
+                <div class="message_delivered">
                     <span>Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</span>
                     <span class="time">18:45</span>
                 </div>
@@ -99,7 +98,7 @@
                 </div>
             </div>
             <div class="other_messages">
-                <div class="message_send">
+                <div class="message_delivered">
                     <span>Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</span>
                     <span class="time">18:45</span>
                 </div>
@@ -111,7 +110,7 @@
                 </div>
             </div>
             <div class="other_messages">
-                <div class="message_send">
+                <div class="message_delivered">
                     <span>Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</span>
                     <span class="time">18:45</span>
                 </div>
@@ -130,7 +129,7 @@
             </div>
         </div>
         <form class="form">
-            <input class="input" type="text">
+            <input class="input" type="text" placeholder="сообщение...">
             <button>-></button>
         </form>
     </div>
