--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="nav">
         <button class="nav__settings btn" id="setting">Настройки</button>
 
-        <button class="nav__exit btn">Войти</button>
+        <button class="nav__exit btn">Выйти</button>
       </div>
 
       <div class="main">
